apps/nginx/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ns
  labels:
    app: nginx
