apps/nginx/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shared-ingress
  namespace: ingress-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /monitor
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - path: /storage
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
